--- a/package.json
+++ b/package.json
@@ -25,5 +25,11 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10"
-  }
+  },
+  {
+    "engines": {
+        "node": ">=20",
+        "pnpm": ">=8"
+    }
+}
 }
